--- a/modules/utils/Cargo.toml
+++ b/modules/utils/Cargo.toml
@@ -2,7 +2,6 @@
 name = "surrealml-core"
 version = "0.0.6"
 edition = "2021"
-build = "./build.rs"
 description = "The core machine learning library for SurrealML that enables SurrealDB to store and load ML models"
 license-file = "LICENSE"
 
@@ -10,7 +9,7 @@ license-file = "LICENSE"
 
 [dependencies]
 regex = "1.9.3"
-ort = { version = "1.16.2", features = ["load-dynamic"], default-features = false }
+ort = { version = "1.16.3" }
 ndarray = "0.15.6"
 once_cell = "1.18.0"
 bytes = "1.5.0"
@@ -23,6 +22,3 @@ tokio = { version = "1.12.0", features = ["full"] }
 [lib]
 name = "surrealml_core"
 path = "src/lib.rs"
-
-[build-dependencies]
-ort = { version = "1.16.2", default-features = true }
