--- a/modules/utils/Cargo.toml
+++ b/modules/utils/Cargo.toml
@@ -9,7 +9,7 @@ license-file = "LICENSE"
 
 [dependencies]
 regex = "1.9.3"
-ort = { version = "1.16.3" }
+ort = { version = "1.16.3", default-features = false, features = ["half"] }
 ndarray = "0.15.6"
 once_cell = "1.18.0"
 bytes = "1.5.0"
