Removed old example

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,4 @@ surrealml/rust_surrealml.cpython-310-darwin.so
 ./modules/pipelines/runners/integrated_training_runner/run_env/
 modules/pipelines/runners/integrated_training_runner/run_env/
 modules/pipelines/data_access/target/
+examples/creditcard.csv
